[*]Changed how terracotta layers generate in badlands to be random based on the world seed instead of fixed. This only affects new worlds.
[*]Changed how grass generates in outback to make it based on simplex noise instead of random decorators. This only affects new worlds.
[*]Changed how trees generate in alpine, steppe, orchard, heathland, coniferous forest (and snowy), and icy peaks in new worlds. Instead of relying on sub-biomes to modify trees, tree generation is now based on simplex noise. As a part of this, aspen grove, wooded steppe, orchard clearing, heathland woods, coniferous forest clearing, snowy coniferous forest clearing, and forested icy peaks have been deprecated. These sub-biomes wil continue to generate in existing worlds but have been removed from new worlds.
[*]Changed alpine to generate fewer trees at high altitudes.
[*]Changed oasis (for real this time!) to not spawn sandy shorelines in new worlds.
[*]Fixed an issue where beaches were generating with grass. This may cause surface material seams but can be manually fixed relatively easily (or old chunks can be deleted in MCEdit and they will regenerate)
[*]Fixed an issue where frozen beaches were generating in places they shouldn't. Existing frozen beaches will revert to normal beaches.
[/list]

Version 1.3.4
[list]
[*]Updated to Extended Addon API 1.1.0.
[/list]

Version 1.3.3
[list]
[*]Added new red sandstone desert pyramids which can spawn in outback and badlands.
[*]Added the ability to double click biomes in the biome configuration menu to toggle whether they are enabled.
[*]Changed world configuration to have deco generation enabled by default if deco is also installed. Deco generation may still be disabled if you wish.
[*]Changed world configuration so that enabling deco automatically enables all deco exclusive biomes. Previously it was possible to enable deco but then not get deco biomes because you had to specifically re-enable them.